# tg_webapp_init_data

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs
